add_library(ihixs_lib
                inclusive_process.cpp
                higgs_eft.cpp
                luminosity_integrals.cpp
                wilson_coefficients.cpp
                sigma_term.cpp
                as_series.cpp
                result_pair.cpp
                )
                

                
