add_library(ihixs_lib
                inclusive_process.cpp
                higgs_eft.cpp
                luminosity_integrals.cpp
                wilson_coefficients.cpp
                sigma_term.cpp
                as_series.cpp
                result_pair.cpp
                channel.cpp
                n3lo_reg_L_pieces_from_ste.F
                ihixs_ui.cpp
                new_luminosity.cpp
                )


                
