add_library(tools  
                    thehatch.cpp
                    vegas_adaptor.cpp
                    histogram.cpp
                    cut.cpp
                    event.cpp
                    bin.cpp
                    convolutions.cpp
                    user_interface.cpp
                    epsilon_series.cpp
                    constants.cpp
                    )
