add_library(tools  
            bin.cpp
            boxmaster.cpp
            constants.cpp
            convolutions.cpp
            counterforge.cpp
            cut.cpp
            cutbox.cpp
            epsilon_series.cpp
            event.cpp
            formalsum.cpp
            histogram.cpp
            option.cpp
            thehatch.cpp
            user_interface.cpp
            vegas_adaptor.cpp
            )
