add_library(tools  
            bin.cpp
            boxmaster.cpp
            constants.cpp
            convolutions.cpp
            counterforge.cpp
            cutbox.cpp
            epsilon_series.cpp
            event.cpp
            formalsum.cpp
#histogram.cpp
            option.cpp
            parser.cpp
            thehatch.cpp
            vegasadaptor.cpp
            )
