


#SET(FORTRAN_FAST_GGF_DIR ${EHIXS_SRC_DIR}/gluon_fusion/fast_rgg2ggh)
  

add_library(fortran_ggf_RR 
                         rrq1q22q1q2h/rrq1q22q1q2ht1.f
                         rrq1q22q1q2h/rrq1q22q1q2ht2.f
                         rrqq2qqh/rrqq2qqht1.f
                         rrqq2qqh/rrqq2qqht2.f
                         rrqq2qqh/rrqq2qqht3.f
                         #rrq1q1bar2q2q2barh/rrqqbar2qqbarht1.f
                         #rrq1q1bar2q2q2barh/rrqqbar2qqbarht2.f
                         #rrq1q1bar2q2q2barh/rrqqbar2qqbarht3.f
                         #rrq1q1bar2q2q2barh/rrqqbar2qqbarht4.f
                         #rrq1q1bar2q2q2barh/rrqqbar2qqbarht5.f
                         #rrq1q1bar2q2q2barh/rrqqbar2qqbarht6.f
                         rrqqbar2ggh/rrqqbar2gght1.f
                         rrqqbar2ggh/rrqqbar2gght2.f
                         rrqqbar2ggh/rrqqbar2gght3.f
                         rrqqbar2ggh/rrqqbar2gght4.f
                         rrqqbar2ggh/rrqqbar2gght5.f
                         rrqqbar2ggh/rrqqbar2gght6.f
                         #
                         rrq1q1bar2q2q2barh/rrq1q1bar2q2q2barht1.f
                         rrq1q1bar2q2q2barh/rrq1q1bar2q2q2barht2.f
                         #
                         rrgq2qgh/rrgq2qght1.f
                         rrgq2qgh/rrgq2qght2.f
                         rrgq2qgh/rrgq2qght3.f
                         rrgq2qgh/rrgq2qght4.f
                         rrgq2qgh/rrgq2qght5.f
                         rrgq2qgh/rrgq2qght6.f
                         rrgq2qgh/rrgq2qght7.f
                         rrgq2qgh/rrgq2qght8.f
                         rrgq2qgh/rrgq2qght9.f
                         rrgq2qgh/rrgq2qght10.f
                         rrgq2qgh/rrgq2qght11.f
                         rrgq2qgh/rrgq2qght12.f
                         rrgq2qgh/rrgq2qght13.f
                         rrgq2qgh/rrgq2qght14.f
                         rrgq2qgh/rrgq2qght15.f
                         #
                         rrqg2qgh/rrqg2qght1.f
                         rrqg2qgh/rrqg2qght2.f
                         rrqg2qgh/rrqg2qght3.f
                         rrqg2qgh/rrqg2qght4.f
                         rrqg2qgh/rrqg2qght5.f
                         rrqg2qgh/rrqg2qght6.f
                         rrqg2qgh/rrqg2qght7.f
                         rrqg2qgh/rrqg2qght8.f
                         rrqg2qgh/rrqg2qght9.f
                         rrqg2qgh/rrqg2qght10.f
                         rrqg2qgh/rrqg2qght11.f
                         rrqg2qgh/rrqg2qght12.f
                         rrqg2qgh/rrqg2qght13.f
                         rrqg2qgh/rrqg2qght14.f
                         rrqg2qgh/rrqg2qght15.f
                         #
                         rrgg2ggh/rrgg2gght1.f
                         rrgg2ggh/rrgg2gght2.f
                         rrgg2ggh/rrgg2gght3.f
                         rrgg2ggh/rrgg2gght4.f
                         rrgg2ggh/rrgg2gght5.f
                         rrgg2ggh/rrgg2gght6.f
                         rrgg2ggh/rrgg2gght7.f
                         rrgg2ggh/rrgg2gght8.f
                         rrgg2ggh/rrgg2gght9.f
                         rrgg2ggh/rrgg2gght10.f
                         rrgg2ggh/rrgg2gght11.f
                         rrgg2ggh/rrgg2gght12.f
                         rrgg2ggh/rrgg2gght13.f
                         rrgg2ggh/rrgg2gght14.f
                         rrgg2ggh/rrgg2gght15.f
                         rrgg2ggh/rrgg2gght16.f
                         #
                         rrgg2qqbarh/rrgg2qqbarht1.f                         
                         rrgg2qqbarh/rrgg2qqbarht2.f                         
                         rrgg2qqbarh/rrgg2qqbarht3.f
                         rrgg2qqbarh/rrgg2qqbarht4.f
                         rrgg2qqbarh/rrgg2qqbarht5.f
                         rrgg2qqbarh/rrgg2qqbarht6.f
                         rrgg2qqbarh/rrgg2qqbarht7.f
                         rrgg2qqbarh/rrgg2qqbarht8.f
                         rrgg2qqbarh/rrgg2qqbarht9.f
                         rrgg2qqbarh/rrgg2qqbarht10.f
                         rrgg2qqbarh/rrgg2qqbarht11.f
                         rrgg2qqbarh/rrgg2qqbarht12.f
                         rrgg2qqbarh/rrgg2qqbarht13.f
          )



